# Lilim-legacy

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  REFINED-PERSONA.md  install.sh  lil-newst-resp.js  uninstall.sh
config/: lilim-identity.json  routing.toml  zeroclaw.toml
current/: config.toml
current/lilim_core/: Cargo.toml
current/lilim_core/src/: config.rs  context.rs  lib.rs  memory.rs  rag.rs
current/lilim_server/src/: api.rs  main.rs  router.rs
current/lilim_server/src/tools/: file_search.rs  mod.rs  terminal.rs
current/lilim_tray/: Cargo.toml  README.md  tauri.conf.json
current/lilim_tray/src/: main.rs
desktop/: lilith-ai.desktop  lilith-tts.desktop
docs/: ARCHITECTURE.md  USER_MANUAL.md  iphone-setup.md
lilim/: PROVENANCE.md
lilim_cli/: Cargo.toml
lilim_cli/src/: main.rs
lilim_core/: Cargo.toml  __init__.py  memory_manager.py  model_router.py  prompt_enhancer.py
lilim_core/src/: api_client.rs  config.rs  lib.rs  vlm.rs
lilim_desktop/: package-lock.json  package.json
lilim_desktop/src/: App.tsx  index.css
lilim_desktop/src-tauri/: Cargo.toml  tauri.conf.json
lilim_desktop/src-tauri/src/: commands.rs  lib.rs  screen_reader.rs
lilim_desktop/src/api/: lilim.ts
lilim_desktop/src/components/: ChatInterface.tsx  EmberOverlay.tsx  FlameBackground.tsx  PairingDialog.tsx
lilim_desktop/src/styles/: globals.css  icon-animation.css
lilim_server/: Cargo.toml
lilim_server/src/: personality.rs
lilim_server/src/tools/: web_search.rs
lilim_tts/: Cargo.toml
lilim_tts/src/: lib.rs
lilith-tts/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
lilith-tts/src/: lib.rs  main.rs
lilith_search/: Cargo.toml
lilith_search/src/: main.rs
packaging/: build-deb.sh
packaging/debian/DEBIAN/: control  postinst  postrm
packaging/packaging/debian/DEBIAN/: prerm
packaging/packaging/debian/etc/lilith/: lilim.yaml
packaging/packaging/debian/usr/lib/lilim/: lilith_search
packaging/packaging/debian/usr/share/doc/lilim-ai/: API_REFERENCE.md  INSTALL_GUIDE.md
scripts/: lilim-serve  lilith-tts-panel
systemd/system/: lilith-ai.service
