[package]
name = "lilim_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Crane inference engine
crane-core = { git = "https://github.com/lucasjinreal/Crane", branch = "main" }

# RAG dependencies (matching existing projects)
fastembed = "4.6.0"
embedvec = { version = "0.5.1", features = ["persistence-sled"] }
tantivy = "0.22"

# Utility
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }

# Memory & Tools
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2.5"
regex = "1.11"
urlencoding = "2.1"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
