[package]
name = "lilith_search"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "4.6.0"
embedvec = { version = "0.5.1", features = ["persistence-sled"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tantivy = "0.22"
