[package]
name = "lilim_tray"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.8", features = ["system-tray", "global-shortcut"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "1.5" }
